# AutoChaos

./: .env  .gitignore  README.md  config
.github/workflows/: pdoc.yaml  tests.yaml
python/: pyproject.toml  requirements-docs.txt  requirements-tests.txt  requirements.txt  setup.py
python/auto_chaos/: __init__.py  __main__.py  base_system.py  chaos.py  gpt_utils.py  k8s_system.py  locust_system.py  utility_system.py
python/auto_chaos/prompts/: chaos_engineer.txt  chaos_report.txt
python/tests/: conftest.py  deployment.yaml  kind_config.yaml  kind_ingress.sh  poc.py  test_chaos.py  test_config  test_k8s_system.py
python/tests/cluster_files/: deployment.yaml  kind_config.yaml  kind_ingress.sh
